--- a/SharedShoppingList.Client/src/index.html
+++ b/SharedShoppingList.Client/src/index.html
@@ -6,7 +6,7 @@
   <title>Shoppy</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/images/shopping-cart.png">
 </head>
 
 <body>
